Fixed: Bug 47656 - [L3] sort menu not fully visible in horizontal mode
(cherry picked from commit 1a2b9c4dba61291e96576f8d18f81140eabdc358)

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -970,6 +970,7 @@ textarea.inplace-editor {
 // Detail view
 
 .rightside.mail-detail-pane {
+    z-index:1;
     background-color: #eee;
 
     .thread-view-control,
