--- a/ui/apps/themes/components/toolbar.less
+++ b/ui/apps/themes/components/toolbar.less
@@ -260,7 +260,6 @@
     @height-small: 30px;
 
     position: absolute;
-    z-index: 2;
 
     width: 100%;
     height: @height-default;
